--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hardhat": "^2.11.1"
   },
   "dependencies": {
+    "@axelar-network/axelar-gmp-sdk-solidity": "^1.3.0",
     "@nomicfoundation/solidity-analyzer-win32-x64-msvc": "^0.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
