--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
-    "hardhat": "^2.11.1"
+    "hardhat": "^2.11.1",
+    "hardhat-gas-reporter": "^1.0.9"
   },
   "dependencies": {
     "@axelar-network/axelar-cgp-solidity": "^4.3.0",
@@ -18,6 +19,7 @@
     "@nomicfoundation/solidity-analyzer-win32-x64-msvc": "^0.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
-    "dotenv": "^16.0.2"
+    "dotenv": "^16.0.2",
+    "hardhat-tracer": "^1.2.0"
   }
 }
